--- a/eventos/src/main/resources/templates/formEvento.html
+++ b/eventos/src/main/resources/templates/formEvento.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<h1>Adicionar Eventos</h1>
-	<form action="">
+	<form action="/eventos" method="post">
 		<div>
 			<label>Nome:</label> <input type="text" name="nome">
 		</div>
