--- a/eventos/src/main/resources/templates/eventos/evento-adicionado.html
+++ b/eventos/src/main/resources/templates/eventos/evento-adicionado.html
@@ -9,8 +9,7 @@
 <body>
 	<div th:replace="~{menu :: menu}"></div>
 	<div class="container">
-		<h1>Bem vindo a nossa aplicação</h1>
-		<h2>Graças a Deus</h2>
+		<h1>Evento adicionado com sucesso!</h1>
 	</div>
 </body>
 </html>
