--- a/eventos/src/main/resources/templates/eventos/lista.html
+++ b/eventos/src/main/resources/templates/eventos/lista.html
@@ -10,7 +10,7 @@
 	<div th:replace="~{menu :: menu}"></div>
 	<div class="container">
 		<h1>Lista de Eventos</h1>
-		
+
 		<table>
 			<thead>
 				<tr>
@@ -24,7 +24,8 @@
 			<tbody>
 				<tr th:each="e : ${eventos}">
 					<td th:text="${e.id}"></td>
-					<td th:text="${e.nome}"></td>
+					<td><a th:href="@{/eventos/{id}(id=${e.id})}"><span
+							th:text="${e.nome}"></span></a></td>
 					<td th:text="${e.local}"></td>
 					<td th:text="${e.data}"></td>
 					<td th:text="${e.horario}"></td>
