--- a/eventos/src/main/resources/templates/eventos/detalhes.html
+++ b/eventos/src/main/resources/templates/eventos/detalhes.html
@@ -13,14 +13,46 @@
 
 		<div class="row">
 			<div class="col s12">
-				<div class="card blue-grey darken-1">
-					<div class="card-content white-text">
+				<div class="card">
+					<div class="card-content">
 						<span class="card-title">Evento</span>
-						<p><strong>Id: </strong><span th:text="${evento.id}"></span></p>
-						<p><strong>Nome: </strong><span th:text="${evento.nome}"></span></p>
-						<p><strong>Local: </strong><span th:text="${evento.local}"></span></p>
-						<p><strong>Data: </strong><span th:text="${evento.data}"></span></p>
-						<p><strong>Hórario: </strong><span th:text="${evento.horario}"></span></p>
+						<p>
+							<strong>Id: </strong><span th:text="${evento.id}"></span>
+						</p>
+						<p>
+							<strong>Nome: </strong><span th:text="${evento.nome}"></span>
+						</p>
+						<p>
+							<strong>Local: </strong><span th:text="${evento.local}"></span>
+						</p>
+						<p>
+							<strong>Data: </strong><span th:text="${evento.data}"></span>
+						</p>
+						<p>
+							<strong>Hórario: </strong><span th:text="${evento.horario}"></span>
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="col s12">
+				<div class="card">
+					<div class="card-content">
+						<span class="card-title">Adicionar convidado</span>
+						<form action="" method="post">
+							<div>
+								<label>Nome:</label> <input type="text" name="nome">
+							</div>
+							<div>
+								<label>RG:</label> <input type="text" name="rg">
+							</div>
+							<div>
+								<button type="submit" class="btn">Salvar</button>
+								<button type="reset" class="btn">Limpar</button>
+							</div>
+						</form>
 					</div>
 				</div>
 			</div>
