--- a/eventos/src/main/resources/templates/eventos/lista.html
+++ b/eventos/src/main/resources/templates/eventos/lista.html
@@ -4,6 +4,8 @@
 <meta charset="UTF-8">
 <link rel="stylesheet"
 	href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+	rel="stylesheet">
 <title>Eventos</title>
 </head>
 <body>
@@ -19,6 +21,7 @@
 					<th>Local</th>
 					<th>Data</th>
 					<th>Horário</th>
+					<th></th>
 				</tr>
 			</thead>
 			<tbody>
@@ -29,6 +32,8 @@
 					<td th:text="${e.local}"></td>
 					<td th:text="${e.data}"></td>
 					<td th:text="${e.horario}"></td>
+					<td><a th:href="@{/eventos/{id}/remover(id=${e.id})}"><i
+							class="material-icons">delete</i></a></td>
 				</tr>
 			</tbody>
 		</table>
