--- a/eventos/src/main/resources/templates/eventos/detalhes.html
+++ b/eventos/src/main/resources/templates/eventos/detalhes.html
@@ -2,13 +2,19 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
+<!-- Compiled and minified CSS -->
 <link rel="stylesheet"
 	href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+	rel="stylesheet">
 <title>Eventos</title>
 </head>
 <body>
 	<div th:replace="~{menu :: menu}"></div>
+
 	<div class="container">
+
+
 		<h1>Detalhes do evento</h1>
 
 		<div class="row">
@@ -17,19 +23,20 @@
 					<div class="card-content">
 						<span class="card-title">Evento</span>
 						<p>
-							<strong>Id: </strong><span th:text="${evento.id}"></span>
+							<strong>Id: </strong><span th:text="${evento.id}">1</span>
 						</p>
 						<p>
-							<strong>Nome: </strong><span th:text="${evento.nome}"></span>
+							<strong>Nome: </strong><span th:text="${evento.nome}">Aniversário
+								de José</span>
 						</p>
 						<p>
-							<strong>Local: </strong><span th:text="${evento.local}"></span>
+							<strong>Local: </strong><span th:text="${evento.local}">Club</span>
 						</p>
 						<p>
-							<strong>Data: </strong><span th:text="${evento.data}"></span>
+							<strong>Data: </strong><span th:text="${evento.data}">25/02/2021</span>
 						</p>
 						<p>
-							<strong>Hórario: </strong><span th:text="${evento.horario}"></span>
+							<strong>Horário: </strong><span th:text="${evento.horario}">20:00</span>
 						</p>
 					</div>
 				</div>
@@ -40,13 +47,20 @@
 			<div class="col s12">
 				<div class="card">
 					<div class="card-content">
-						<span class="card-title">Adicionar convidado</span>
-						<form action="" method="post">
+						<span class="card-title">Adicionar Convidado:</span>
+						<form th:action="@{/eventos/{idEvento}(idEvento=${evento.id})}"
+							method="post">
 							<div>
-								<label>Nome:</label> <input type="text" name="nome">
+								<input type="hidden" name="id" th:value="${convidado.id}"
+									readonly="readonly">
 							</div>
 							<div>
-								<label>RG:</label> <input type="text" name="rg">
+								<label>Nome: </label> <input type="text" name="nome"
+									th:value="${convidado.nome}">
+							</div>
+							<div>
+								<label>RG: </label> <input type="text" name="rg"
+									th:value="${convidado.rg}">
 							</div>
 							<div>
 								<button type="submit" class="btn">Salvar</button>
@@ -77,7 +91,11 @@
 									<td th:text="${c.id}">1</td>
 									<td th:text="${c.nome}">Fernando Soares</td>
 									<td th:text="${c.rg}">123</td>
-									<td>
+									<td><a
+										th:href="@{/eventos/{idEvento}/convidados/{idConvidado}/selecionar(idEvento=${evento.id}, idConvidado=${c.id})}"><i
+											class="material-icons">edit</i></a> <a
+										th:href="@{/eventos/{idEvento}/convidados/{idConvidado}/remover(idEvento=${evento.id}, idConvidado=${c.id})}"><i
+											class="material-icons">delete</i></a></td>
 								</tr>
 							</tbody>
 						</table>
@@ -85,6 +103,7 @@
 				</div>
 			</div>
 		</div>
+
 	</div>
 </body>
 </html>
